# gpu-alert

./: .gitignore  README.md  alert.py  mailer.py  pyproject.toml  requirements.txt  utility.py
gpu_alert/mailer/: __init__.py  mailer.py
gpu_alert/manager/: manager.py
gpu_alert/product/: __init__.py  product.py  product_retailer_a.py
gpu_alert/search/: __init__.py  search.py  search_retailer_a.py
gpu_alert/utils/: __init__.py  utils.py
resources/.product_profile_creation_kit/: bs4_retailer_a.py  get_request_rtx_3090.json  post_request_rtx_3070.json  product_template.json  retailer_a.py
resources/alert/data/: alert_profile.json
resources/alert/data/retailer_a/: RTX-3070.json  RTX-3080.json  RTX-3090.json
resources/alert/data/retailer_a/product_profile_creation_kit/: bs4_retailer_a.py  get_request_rtx_3070.json  get_request_rtx_3080.json  post_request_rtx_3080.json  post_request_rtx_3090.json  retailer_a.py
resources/alert_profiles/: me.json
resources/email/recipients/: test_recipients.json  test_send_to_all.json
resources/email/senders/: me.json
resources/email/templates/: stock_alert.json
resources/retailers/retailer_a/data/: RTX-3070.json  RTX-3080.json  RTX-3090.json  TEST-RTX-3060.json
test/integration/: test_alert.py  test_email.py
test/integration/data/: update_products_retailer_a_30_04_21.json  update_products_retailer_b_30_04_21.json
test/mailer/: test_email.py
test/manager/: test_manager.py
test/search/: test_search.py  test_search_retailer_a.py
test/unit/: test_alert.py  test_email.py
(+9 files in other folders)
