[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-alert"
version = "0.1.0"
authors = [
  { name="Jannic Holzer", email="jannic.holzer@gmail.com" },
]
description = "Get stock alerts for GPUs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/jmholzer/gpu-alert"
"Bug Tracker" = "https://github.com/jmholzer/gpu-alert/issues"

[tool.setuptools]
packages = ["gpu_alert"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}